overflow prevention

--- a/web/src/components/pages/dashboard/dashboard.css
+++ b/web/src/components/pages/dashboard/dashboard.css
@@ -76,6 +76,7 @@
 
         a {
             margin-inline-end: 25px;
+            overflow-wrap: anywhere;
             margin-bottom: -1.5px;
             padding-bottom: 5px;
             color: rgba(0, 0, 0, 0.5);
